# ift6113_2022

./: readme.md
hw1_cpp/: CMakeLists.txt  main.cpp  readme.md  trimesh.h
hw1_python/: example.ipynb  example.py  readme.md
hw2_cpp/: CMakeLists.txt  README.md  main.cpp
hw2_python/: example.py  readme.md
hw3_cpp/: main.cpp
hw3_python/: Example.ipynb  readme.md  scripts.py
input/: readme.md
